Fixed image's labels style on mobile

--- a/web/app/themes/Foody/resources/sass/recipes-grid/_recipe-grid-item.scss
+++ b/web/app/themes/Foody/resources/sass/recipes-grid/_recipe-grid-item.scss
@@ -198,11 +198,11 @@
 
         span {
           font-size: 24px;
-          padding: 0 3em 0 1.2em;
+          padding: 1.2em 1.2em 1.5em 1.2em;
           transform: scale(0.6);
           transform-origin: 12px 0;
           top: 0;
-          background-position-y: unset;
+          background-position-y: center;
         }
 
       }
